# tap-neon

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: constraints.txt  release.yaml  test.yaml  test.yml  update_catalog.yaml  update_catalog.yml  update_openapi.yml
scripts/: update_openapi.py
tap_neon/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_neon/openapi/: __init__.py  openapi.json
tests/: __init__.py  test_core.py  test_schema_evolution.py
tests/__snapshots__/test_schema_evolution/: test_catalog_changes[branches].json  test_catalog_changes[databases].json  test_catalog_changes[endpoints].json  test_catalog_changes[operations].json  test_catalog_changes[projects].json  test_catalog_changes[roles].json  test_catalog_changes[snapshots].json
