[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-neon"
description = "Singer tap for Neon Serverless Postgres, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Neon Serverless Postgres",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "requests~=2.33",
  "singer-sdk~=0.54.0a4",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-neon = "tap_neon.tap:TapNeon.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-neon#readme"
Homepage = "https://github.com/reservoir-data/tap-neon"
Source = "https://github.com/reservoir-data/tap-neon"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=9",
  "singer-sdk[testing]",
  "syrupy>=5",
]
typing = [
  "mypy",
  "ty>=0.0.1a23",
  "types-requests",
  { include-group = "testing" },
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.uv]
required-version = ">=0.10"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
per-file-ignores."tests/*" = [
  "ANN",
  "S101",
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
ty = "ty"
types-requests = "requests"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest]
addopts = [
  "-v",
  "-ra",
]
filterwarnings = [
  "error",
  "once:No records were available to test:UserWarning",
  "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
requires = [
  "tox>=4.51",
  "tox-uv",
]
env_list = [
  "dependencies",
  "typing",
  "test",
]
[tool.tox.env.dependencies]
description = "check for unused, missing and transitive dependencies"
dependency_groups = [ "testing" ]
labels = [ "check" ]
commands = [ [ "deptry", "." ] ]
[tool.tox.env.test]
base_python_file = [ ".python-version" ]
[tool.tox.env.typing]
description = "type checks with mypy and ty"
dependency_groups = [ "testing", "typing" ]
labels = [ "check" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_neon", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_neon", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
description = "run tests on Python {py_dot_ver}"
labels = [ "test" ]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_NEON_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
